added member lists and e2e test, everything 100% coverage, 0% cpd
